--- a/FitNesseRoot/FrontPage/Rozliczenia/SetUp/FitnesseTest.wiki
+++ b/FitNesseRoot/FrontPage/Rozliczenia/SetUp/FitnesseTest.wiki
@@ -6,3 +6,4 @@
 |test,test,test|-32.43,22.88,22|false|9|
 |na/zwa,testowa|99.99,-2|false|9|
 |kkk<<KKK,towejdzie|32.92,992|false|10|
+|produkt,nieprodukt|99.23,0|false|11|
